spacing fixes

--- a/styles.css
+++ b/styles.css
@@ -169,10 +169,6 @@ header {
     margin-bottom: 16px;
 }
 
-#projects-spacer{
-/*    height: 110px;*/
-}
-
 #contact-spacer {
     height: 180px;
 }
@@ -919,7 +915,7 @@ header::after {
     .about-2 h1 {
         display: block;
         margin-right: auto;
-        margin-left: 17px;
+        margin-left: 13px;
         font-size: 50px;
         margin-bottom: -12px;
         color: #42c2f4;
